# auth-service-fast-api

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  test_main.http
migrations/: env.py
migrations/versions/: 7e7240997364_user_table.py
src/: main.py
src/api/: __init__.py  deps.py
src/api/v1/: __init__.py
src/api/v1/auth/: router.py
src/api/v1/users/: __init__.py  router.py
src/core/: container.py  db.py  exceptions.py  repository.py  security.py  settings.py  uow.py
src/models/: base.py  user.py
src/repo/: __init__.py  user_repo.py
src/schemas/: auth.py  response.py  user.py
src/services/auth/: __init__.py  auth_service.py
src/services/email/: __init__.py  email_service.py
src/services/user/: __init__.py  user_service.py
src/storage/: __init__.py  redis_store.py
src/use_cases/auth/: __init__.py  auth_use_case.py
templates/: mail_confirmation.html
